--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+ @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
+ 
  * {
     margin: 0;
             padding: 0;
@@ -5,7 +7,7 @@
         }
 
         body {
-            font-family: 'Georgia', serif;
+             font-family: "Dancing Script", cursive;
             overflow-x: hidden;
             /* background: linear-gradient(45deg, #ffb3d9, #ff80bf, #ffa6cc, #ffccdd, #ffe6f2); */
             background-image: url(./fondo.png);
@@ -46,7 +48,7 @@
             /* background: rgba(255, 255, 255, 0.95); */
             padding: 2rem 1.5rem;
             border-radius: 30px;
-            box-shadow: 0 15px 40px rgba(255, 182, 193, 0.4);
+            /* box-shadow: 0 15px 40px rgba(255, 182, 193, 0.4); */
             /* backdrop-filter: blur(15px); */
             border: 1px solid rgba(255, 192, 203, 0.3);
         }
@@ -55,7 +57,7 @@
             font-size: 2.8rem;
             color: #e91e63;
             margin-bottom: 1rem;
-            text-shadow: 2px 2px 8px rgba(233, 30, 99, 0.3);
+            /* text-shadow: 2px 2px 8px rgba(233, 30, 99, 0.3); */
             font-weight: bold;
         }
 
@@ -86,20 +88,20 @@
         }
 
         .hero .section-content {
-            background: rgba(255, 255, 255, 0.15);
+            /* background: rgba(255, 255, 255, 0.15); */
             color: white;
-            border: 1px solid rgba(255, 255, 255, 0.2);
+            /* border: 1px solid rgba(255, 255, 255, 0.2); */
         }
 
         .hero h1 {
-            color: white;
+            color: #e91e63;
             font-size: 3.2rem;
             margin-bottom: 0.5rem;
-            text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+            text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
         }
 
         .hero p {
-            color: rgba(255, 255, 255, 0.95);
+            color: black;
             font-size: 1.1rem;
         }
 
