--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@
              font-family: "Dancing Script", cursive;
             overflow-x: hidden;
             /* background: linear-gradient(45deg, #ffb3d9, #ff80bf, #ffa6cc, #ffccdd, #ffe6f2); */
-            background-image: url(./fondo.png);
-            background-size: 200% 300%;
+            background-image: url(./fondo3.jpeg);
+            background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
             animation: gradientAnimation 100s ease infinite;
